--- a/client/src/components/CalendarBoard/customizedReactBigCalendar.css
+++ b/client/src/components/CalendarBoard/customizedReactBigCalendar.css
@@ -2,14 +2,14 @@
 .rbc-btn {
   color: inherit;
   font: inherit;
-  margin: 0; 
+  margin: 0;
 }
 
 button.rbc-btn {
   overflow: visible;
   text-transform: none;
   -webkit-appearance: button;
-  cursor: pointer; 
+  cursor: pointer;
 }
 
 button[disabled].rbc-btn {
@@ -17,7 +17,7 @@ button[disabled].rbc-btn {
 
 button.rbc-input::-moz-focus-inner {
   border: 0;
-  padding: 0; 
+  padding: 0;
 }
 
 .rbc-calendar {
@@ -25,7 +25,7 @@ button.rbc-input::-moz-focus-inner {
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: stretch; 
+  align-items: stretch;
 }
 
 .rbc-calendar *,
@@ -54,11 +54,11 @@ button.rbc-input::-moz-focus-inner {
   direction: rtl; }
 
 .rbc-off-range {
-  color: #999999; 
+  color: #999999;
 }
 
 .rbc-off-range-bg {
-  background: #e6e6e6; 
+  background: #e6e6e6;
 }
 
   /*Days of the week */
@@ -109,7 +109,7 @@ button.rbc-input::-moz-focus-inner {
     .rbc-row-content-scrollable .rbc-row-content-scroll-container::-webkit-scrollbar {
       display: none; }
 
-.rbc-today {  
+.rbc-today {
   background-color: #f4f6ff; /*background-color: #eaf6ff; */
 }
 
@@ -120,57 +120,34 @@ button.rbc-input::-moz-focus-inner {
   justify-content: center;
   align-items: center;
   margin-bottom: 10px;
-  font-size: 1.4rem; 
+  font-size: 1.4rem;
   font-weight: 600;
 }
-  
+
   .rbc-toolbar .rbc-toolbar-label {
     flex-grow: 1;
     padding: 0 10px;
-    text-align: center; 
+    min-width: 300px;
+    text-align: center;
   }
   /*Buttons next to month in toolbar E.g. Today, Back, Next, etc*/
   .rbc-toolbar button {
-    color: transparent;
-    display: inline-block;
+    /* color: #000;
+    /* display: inline-block; */
     margin: 0;
     text-align: center;
     vertical-align: middle;
     background: none;
-    background-image: none;
+    /* background-image: none; */
     /*border: 1px solid #ccc;*/
-    border: none;
+    /* border: none;
     padding: .375rem 1rem;
     border-radius: 4px;
     line-height: normal;
-    white-space: nowrap; 
-    background-color: transparent;
+    white-space: nowrap;
+    background-color: transparent; */
   }
-    .rbc-toolbar button:active, .rbc-toolbar button.rbc-active {
-      background-image: none;
-      /*box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);*/
-      background-color: transparent; /* #e6e6e6;*/
-      border: none;
-      /*border-color: #adadad; */
-    }
-    .rbc-toolbar button:active:hover, .rbc-toolbar button:active:focus, .rbc-toolbar button.rbc-active:hover, .rbc-toolbar button.rbc-active:focus {
-        color: transparent; /* #373a3c;*/
-        background-color: transparent; /* #d4d4d4;*/
-        border: none;
-        /*border-color: #8c8c8c; */
-    }
-    .rbc-toolbar button:focus {
-      color: transparent; /* #373a3c;*/
-      background-color: transparent; /*#e6e6e6;*/
-      border: none;
-      /*border-color: #adadad; */
-    }
-    .rbc-toolbar button:hover {
-      color: transparent; /*#373a3c;*/
-      background-color: transparent; /*#e6e6e6;*/
-      border: none;
-      /*border-color: #adadad; */
-    }
+
 
 .rbc-btn-group {
   display: inline-block;
@@ -202,33 +179,33 @@ button.rbc-input::-moz-focus-inner {
 
 /* Event tasks in the calendar*/
 .rbc-event, .rbc-day-slot .rbc-background-event {
-  border: 0.5px;
+  border: 2px;
   border-color: #d6d6d6;
   box-sizing: border-box;
   box-shadow:rgba(104, 104, 104, 0.623);
   margin: 0;
-  padding: 2px 5px;  
+  padding: 2px 5px;
   background-color: #fff;
   /*background-color: #3174ad;*/
   border-radius: 5px;
   color: black;
   cursor: pointer;
-  width: 100%;
+  width: 95%;
   text-align: left; }
   .rbc-slot-selecting .rbc-event, .rbc-slot-selecting .rbc-day-slot .rbc-background-event, .rbc-day-slot .rbc-slot-selecting .rbc-background-event {
     cursor: inherit;
     pointer-events: none; }
-  .rbc-event.rbc-selected, .rbc-day-slot .rbc-selected.rbc-background-event {    
-    background-color: #74ad31; /*Selection color*/
+  .rbc-event.rbc-selected, .rbc-day-slot .rbc-selected.rbc-background-event {
+    background-color: #9BA9CC; /*Selection color*/
   }
   .rbc-event:focus, .rbc-day-slot .rbc-background-event:focus {
     outline: 5px auto #3b99fc; }
 .rbc-event-color {
-  border: 1px solid #f4f6ff;
-  height: 0.8vh;
-  width: 3.6vh;
+  border: 1px solid transparent;
+  height: 0.5vh;
+  width: 3.6vw;
   border-radius: 20px;
-  margin: 1vh 0vh 0vh 0vh;
+  margin: 1vh 0vh 0.5vh 0vh;
 }
 
 .rbc-event-label {
@@ -238,7 +215,7 @@ button.rbc-input::-moz-focus-inner {
 }
 
 .rbc-event-overlaps {
-  box-shadow: -1px 1px 5px 0px rgba(51, 51, 51, 0.5); 
+  box-shadow: -1px 1px 5px 0px rgba(51, 51, 51, 0.5);
 }
 
 .rbc-event-continues-prior {
@@ -262,7 +239,7 @@ button.rbc-input::-moz-focus-inner {
   flex-direction: row; }
 
 .rbc-row-segment {
-  padding: 0 1px 1px 1px; }
+  padding: 0 0 0 0; }
 
 .rbc-selected-cell {
   background-color: rgba(0, 0, 0, 0.1); }
@@ -273,11 +250,11 @@ button.rbc-input::-moz-focus-inner {
   text-decoration: none;
   font-size: 1.5vh;
   /*font-size: 85%;*/
-  padding: 1vh;  
+  padding: 1vh;
   /*z-index: 4;*/
-  font-weight: bold;  
+  font-weight: bold;
   height: auto;
-  line-height: normal; 
+  line-height: normal;
 }
 
 /*Class for all elements of the month*/
@@ -292,12 +269,12 @@ button.rbc-input::-moz-focus-inner {
   width: 100%;
   user-select: none;
   -webkit-user-select: none;
-  height: 100%; 
+  height: 100%;
 }
 
 .rbc-month-header {
   display: flex;
-  flex-direction: row; 
+  flex-direction: row;
   background-color: white; /*Week days background color */
 }
 
@@ -309,17 +286,17 @@ button.rbc-input::-moz-focus-inner {
   flex-basis: 0px;
   overflow: visible;
   /*overflow: hidden;*/
-  height: 100%; 
+  height: 100%;
   padding: 10px;
   border: 1px solid #e6e6e6;
   border-top: 1px solid #e5e5e5;
   border-top: none;
   -webkit-background-clip: padding-box;
-  background-clip: padding-box;  
+  background-clip: padding-box;
   /* Border color for all, including outside borders of calendar*/
 }
   .rbc-month-row + .rbc-month-row {
-    border-top: none; 
+    border-top: none;
     /*border-top: 1px solid #DDD;*/
   }
 
@@ -327,15 +304,15 @@ button.rbc-input::-moz-focus-inner {
   flex: 1 1 0;
   min-width: 0;
   padding-right: 5px;
-  text-align: right; 
+  text-align: right;
   color: rgba(78, 97, 128, 0.671);
 }
 .rbc-date-cell.rbc-now {
-   font-weight: bold; 
+   font-weight: bold;
 }
 .rbc-date-cell > a, .rbc-date-cell > a:active, .rbc-date-cell > a:visited {
   color: inherit;
-  text-decoration: none; 
+  text-decoration: none;
 }
 
 .rbc-row-bg {
@@ -366,7 +343,7 @@ button.rbc-input::-moz-focus-inner {
   border-bottom: 1px solid #e5e5e5;
   margin: auto; /*margin: -10px -10px 5px -10px;*/
   text-align: center;
-  padding: 2px 10px; 
+  padding: 2px 10px;
 }
 
 .rbc-agenda-view {
@@ -603,5 +580,5 @@ button.rbc-input::-moz-focus-inner {
   right: 0;
   height: 1px;
   background-color: #74ad31;
-  pointer-events: none; 
+  pointer-events: none;
 }
